1.4.3.1. Collection API Улучшения [#270849]